[package]
name = "tradeterm"
version = "0.1.0"
authors = ["CieciaOne <CieciaV2.0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.3", features = ["json"]}
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
tokio = { version = "1.6.1", features = ["full"] }
tungstenite = "0.13.0"
rust_decimal = "1.18.0"
#tokio-tungstenite = "0.14.0"
